@@ -1,3 +1,7 @@
+2006-12-11  Sam Steingold  <sds@podval.org>
+
+	* iofkts.tst: test for [ 1613300 ]: extra space in unreadable output
+
 2006-12-10  Sam Steingold  <sds@gnu.org>
 
 	* macro8.tst, excepsit.tst: test for [ 1612859 ]: import into
