@@ -1,3 +1,9 @@
+2006-12-11  Sam Steingold  <sds@podval.org>
+
+	fixed bug #[ 1613300 ]: extra space in unreadable output
+	* io.d (pr_unreadably): do not print a space after string when the
+	printer is pr_record_ab_00
+
 2006-12-10  Sam Steingold  <sds@gnu.org>
 
 	fixed bug #[ 1612859 ]: IMPORT into the KEYWORD package does not
